--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,5 +2,6 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
-  background: white;
+  background-image: url("../public/assets/piggy.jpeg");
+  background-size: cover;
 }
