--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
   background-image: url("../public/assets/piggy.jpeg");
+  background-repeat: no-repeat;
   background-size: cover;
 }
